# It-Shopping-Center

./: Book1.xlsx  README.md  logic_classes.h  main.cpp
cal_test_qt/build-calc-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
devices/: devices.cpp  devices.h
devices/comp_parts/: comp_parts_parent.cpp  comp_parts_parent.h  cooling_u.cpp  cooling_u.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  memory.cpp  memory.h  motherboard.cpp  motherboard.h  pc_case.cpp  pc_case.h  psu.cpp  psu.h
devices/comp_parts/storage/: hdd.cpp  hdd.h  ssd.cpp  ssd.h  storage.cpp  storage_parent.h
devices/console/: console.cpp  console.h  handheld.cpp  handheld.h  stationed.cpp  stationed.h
devices/desktop/: desktop.cpp  desktop.h
devices/laptop/: laptop.cpp  laptop.h
devices/other_devices/: other_devices.h
devices/peripherals/: display.cpp  display.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  peri_parent.h  peripherals.cpp  portable_hdd.cpp  portable_hdd.h  printer.cpp  printer.h  sd_card.cpp  sd_card.h  touchpad.cpp  touchpad.h  usb_drive.cpp  usb_drive.h  webcam.cpp  webcam.h  wire.cpp
devices/peripherals/audio/: earbuds.cpp  earbuds.h  earphones.cpp  earphones.h  headphones.cpp  headphones.h  headset.cpp  headset.h  microphone.cpp  microphone.h  speakers.cpp  speakers.h
exe/dev_visual_im/: desktop.avif
kiwi_ui/: CMakeLists.txt  add_device_console.cpp  add_device_console.h  add_device_console.ui  add_device_desktop.cpp  add_device_desktop.cpp.autosave  add_device_desktop.h  add_device_desktop.ui  add_device_handheld.cpp  add_device_handheld.cpp.autosave  add_device_handheld.h  add_device_handheld.ui  add_device_laptop.cpp  add_device_laptop.cpp.autosave  add_device_laptop.h  add_device_laptop.ui.autosave  add_device_phone.cpp  add_device_phone.cpp.autosave  add_device_phone.h  add_device_phone.ui  add_device_stationed.cpp  add_device_stationed.cpp.autosave  add_device_stationed.h  add_device_stationed.ui.autosave  add_device_tablet.cpp  add_device_tablet.h  add_device_tablet.ui  add_device_vr.cpp  add_device_vr.h  add_device_vr.ui  add_device_watch.cpp  add_device_watch.h  add_device_watch.ui  add_to_cart.cpp  add_to_cart.cpp.autosave  add_to_cart.h  add_to_cart.ui  add_vr.cpp  add_vr.h  add_vr.ui  (+140 more)
kiwi_ui/build-ui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
program/: all_headers.h  program.h
testfolder/: testwrite.cpp
txt_files/: desktop.txt  laptop.txt  smartphones.txt  smartwatch.txt  stationed.txt  tablet.txt  vr.txt
